--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title></title>
+    <title>Hi</title>
   </head>
   <body>
-    <h1></h1>
+    <h1>Hi</h1>
   </body>
 </html>
