--- a/index.html
+++ b/index.html
@@ -54,9 +54,13 @@
 										</div>
 									</div>
 									<div class="col col2">
-										<h3>Maecenas a gravida quam</h3>
-										<p>Etiam posuere hendrerit arcu, ac blandit nulla. Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex.</p>
-										<p>Sed congue malesuada nibh, a varius odio vehicula aliquet. Aliquam consequat, nunc quis sollicitudin aliquet, enim magna cursus auctor lacinia nunc ex blandit augue. Ut vitae neque fermentum, luctus elit fermentum, porta augue. Nullam ultricies, turpis at fermentum iaculis, nunc justo dictum dui, non aliquet erat nibh non ex. </p>
+										<h3>skills</h3>
+										<p>HTML, CSS, Sass, Bootstrap, responsive web design, cross-Browser compatibility</p>
+										<p>JavaScript, jQuery, AngularJS, AJAX, JSON, XML</p>
+										<p>WordPress, CMS, PHP, SQL</p>
+										<p>ActionScript 2.0, ActionScript 3.0, Java, C#, Python</p>
+										<p>Photoshop, Illustrator, Flash, Indesign, Premiere</p>
+</p>
 										<a href="#" class="button">Learn More</a>
 									</div>
 								</div>
