--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<h3>skills</h3>
 										<p>HTML, CSS, Sass, Bootstrap, responsive web design, cross-Browser compatibility</p>
 										<p>JavaScript, jQuery, AngularJS, AJAX, JSON, XML</p>
-										<p>WordPress, CMS, PHP, SQL</p>
+										<p>WordPress, CMS, PHP, SQL, node.js</p>
 										<p>ActionScript 2.0, ActionScript 3.0, Java, C#, Python</p>
 										<p>Photoshop, Illustrator, Flash, Indesign, Premiere</p>
 </p>
